# BNN_C

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  output.txt  resnet18.c
include/: common.h  config.h  conv.h  core.h  loadNet.h  net.h  utils.h
net/: CMakeLists.txt  resnet18.c
src/: BConvTest.c  BinarizeConv2d.c  CMakeLists.txt  Conv2d.c  JsonParse.c  getbitcont.c  main.c  utils.c
src/core/: BinarizeConv2d.c  CMakeLists.txt  Conv2d.c  core.c
src/func/: CMakeLists.txt  JsonParse.c  JsonParsev2.c  jpeg_decoder.c  loadNet.c  utils.c
test/: BConvTest.c  BinarizeConv2d.py  CMakeLists.txt  dataset_test.sh  getbitcont.c
tools/: model_to_json.py  trans_cifar10_to_jpg.py
